--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,3 +1,34 @@
 .hero {
-  background: $blue;
+  background: url('../img/decor/Батончики.svg') left 78% center no-repeat, url('../img/decor/узор\ 1.png') right bottom no-repeat;
+  background-color: $blue;
+  height: 100%;
+  min-height: rem(652px);
+  color: #fff;
+  position: relative;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 24px 0 45px;
+}
+
+.hero__title-section {
+  width: 46%;
+}
+
+.hero__main-title {
+  font-size: 48px;
+  line-height: 1.1;
+  font-weight: bold;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.hero__title-desc {
+  font-size: 21px;
+  margin-bottom: 28px;
+  padding-right: 10%;
 }
