--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -21,7 +21,7 @@
 
 .hero__main-title {
   font-size: 48px;
-  line-height: 1.1;
+  line-height: 1.2;
   font-weight: bold;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -31,4 +31,5 @@
   font-size: 21px;
   margin-bottom: 28px;
   padding-right: 10%;
+  margin-bottom: 45px;
 }
