--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,15 +1,19 @@
-html,
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: $baseFontSize;
   height: 100%;
 }
 
 body {
-  font-size: $baseFontSize;
-  font-family: "Alegreya Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  color: #292929;
   height: 100%;
 }
 
@@ -20,6 +24,12 @@ body {
   overflow: hidden;
 }
 
+.maincontent {
+  height: 100%;
+  transform: translateY(0);
+  transition: transform 1s;
+}
+
 .container {
   width: 95%;
   max-width: $containerWidth;
@@ -27,17 +37,27 @@ body {
   position: relative;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   font-weight: normal;
+}
+
+table {
+  border-collapse: collapse;
 }
 
 ul {
   padding: 0;
   margin: 0;
-    li {
-      list-style: none;
-    }
+
+  li {
+    list-style: none;
+  }
 }
 
 p {
@@ -47,15 +67,11 @@ p {
 
 footer {
   position: relative;
-  width: 100%;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 a {
-  color: inherit
+  text-decoration: none;
+  color: inherit;
 }
 
 img {
