--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,10 +1,24 @@
 .hero {
-  background: url('../img/decor/Батончики.svg') left 78% center no-repeat, url('../img/decor/узор\ 1.png') right bottom no-repeat;
+  background: url('../img/decor/узор\ 1.png') right bottom no-repeat;
   background-color: $blue;
   height: 100vh;
   min-height: 650px;
   color: #fff;
   position: relative;
+
+    &::before {
+      position: absolute;
+      content: url('../img/decor/Лист\ 1.png');
+      bottom: -41px;
+      left: 2%;   
+    }
+
+    &::after {
+      position: absolute;
+      content: url('../img/decor/comp.png');
+      bottom: -55px;
+      right: 0;
+    }
 }
 
 .hero__container {
@@ -13,6 +27,7 @@
   justify-content: space-between;
   height: 100%;
   padding: 24px 0 45px;
+  background: url('../img/decor/Батончики.svg') left 78% center / 50% auto no-repeat;
 }
 
 .hero__title-section {
