--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -20,7 +20,7 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   overflow: hidden;
 }
 
@@ -31,8 +31,7 @@ body {
 }
 
 .container {
-  width: 95%;
-  max-width: $containerWidth;
+  width: $containerWidth;
   margin: 0 auto;
   position: relative;
 }
