--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,3 +19,6 @@ $darkGreen: #365A49;
 @import "benefits";
 @import "benefit";
 @import "benefits-section";
+@import "reviews-section";
+@import "reviews";
+@import "interactive-avatar";
