--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,3 +22,7 @@ $darkGreen: #365A49;
 @import "reviews-section";
 @import "reviews";
 @import "interactive-avatar";
+@import "order-section";
+@import "form.scss";
+@import "radio.scss";
+
