--- a/scss/btn.scss
+++ b/scss/btn.scss
@@ -6,6 +6,8 @@
   border-radius: 100px;
   line-height: 1;
   text-decoration: none;
+  border: none;
+  cursor: pointer;
 
       &--theme--white {
         background: #fff;
@@ -13,6 +15,29 @@
           &:hover {
             color: #fff;
             background: $darkGreen;
+          }
+      }
+
+      &--theme--green {
+        background: #fff;
+        color: #2E4E3F;
+        
+          &:hover {
+            background: #2E4E3F;
+            color: #fff;
+          }
+      }
+
+      &--theme--transparent {
+        background: transparent;
+        color: #497870;
+        text-transform: none;
+        font-weight: 400;
+        padding: 18px 2px;
+
+          &:hover {
+            color: #365A49;
+            font-weight: 700;
           }
       }
 }
