--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,9 @@ $containerWidth: 940px;
 $baseFontSize: 18px;
 
 
+// z-index
+$z-fixed-menu: 100;
+
 //colors
 $blue: #61C4D9;
 $darkGreen: #365A49;
@@ -25,4 +28,5 @@ $darkGreen: #365A49;
 @import "order-section";
 @import "form.scss";
 @import "radio.scss";
+@import "fixed-menu.scss";
 
