adaptive layout hero-section for tablets

--- a/css/scss/benefits-section.scss
+++ b/css/scss/benefits-section.scss
@@ -7,6 +7,6 @@
     position: absolute;
     content: url('../img/decor/малина\ .png');
     left: 0;
-    bottom: -114px;
+    bottom: rem(-114px);
   }
 }
