--- a/css/scss/headline.scss
+++ b/css/scss/headline.scss
@@ -1,10 +1,10 @@
 .headline {
   text-align: center;
-  margin-bottom: 48px;
+  margin-bottom: rem(48px);
 }
 
 .headline__title {
-  margin-bottom: 11px;
+  margin-bottom: rem(11px);
 } 
 
 .headline__subtitle {
