--- a/css/scss/benefit.scss
+++ b/css/scss/benefit.scss
@@ -3,13 +3,13 @@
 }
 
 .benefit__image {
-  margin-bottom: 10px;
+  margin-bottom: rem(10px);
 }
 
 .benefit__image-wrapper {
   display: inline-block;
-  width: 126px;
-  height: 126px;
+  width: rem(126px);
+  height: rem(126px);
   position: relative;
   background: #F2F5F4;
   border-radius: 50%;
@@ -17,8 +17,8 @@
 }
 
 .benefit__icon {
-  width: 68px;
-  height: 68px;
+  width: rem(68px);
+  height: rem(68px);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -26,9 +26,9 @@
 }
 
 .benefit__title {
-  font-size: 27px;
+  font-size: rem(27px);
   font-weight: bold;
-  margin-bottom: 12px;
+  margin-bottom: rem(12px);
 }
 
 .benefit p {
