--- a/css/scss/btn.scss
+++ b/css/scss/btn.scss
@@ -1,9 +1,9 @@
 .btn {
-  font-size: 19px;
+  font-size: rem(19px);
   font-weight: bold;
-  padding: 18px 35px;
+  padding: rem(18px) rem(35px);
   text-transform: uppercase;
-  border-radius: 100px;
+  border-radius: rem(100px);
   line-height: 1;
   text-decoration: none;
   border: none;
@@ -33,7 +33,7 @@
         color: #497870;
         text-transform: none;
         font-weight: 400;
-        padding: 18px 2px;
+        padding: rem(18px) rem(2px);
 
           &:hover {
             color: #365A49;
