--- a/css/scss/features.scss
+++ b/css/scss/features.scss
@@ -3,7 +3,7 @@
 }
 
 .features__item {
-  margin-right: 46px;
+  margin-right: rem(46px);
 
     &:last-child {
       margin-right: 0;
@@ -11,8 +11,8 @@
 }
 
 .feature__item {
-  width: 45px;
-  margin-right: 7px;
+  width: rem(45px);
+  margin-right: rem(7px);
 }
 
 .feature {
@@ -20,12 +20,13 @@
 }
 
 .feature__icon {
-  margin-right: 10px;
+  margin-right: rem(10px);
   min-width: 33%;
+  flex-shrink: 0;
 }
 
 .feature__text {
-  font-size: 16px;
-  max-width: 85px;
+  font-size: rem(16px);
+  max-width: rem(85px);
   line-height: 1.2;
 }
