--- a/css/scss/fixed-menu.scss
+++ b/css/scss/fixed-menu.scss
@@ -3,10 +3,14 @@
   top: 20%;
   right: 3%;
   z-index: $z-fixed-menu;
+
+  @include tablets {
+    display: none;
+  }
 }
 
 .fixed-menu__item {
-  margin-bottom: 5px;
+  margin-bottom: rem(5px);
 
     &--active {
       .fixed-menu__link {
@@ -16,9 +20,9 @@
 }
 
 .fixed-menu__link {
-  width: 16px;
-  height: 16px;
-  border: 1px solid transparent;
+  width: rem(16px);
+  height: rem(16px);
+  border: rem(1px) solid transparent;
   border-radius: 50%;
   display: block;
   position: relative;
@@ -26,8 +30,8 @@
     &::before {
       content: '';
       display: block;
-      width: 6px;
-      height: 6px;
+      width: rem(6px);
+      height: rem(6px);
       border-radius: 50%;
       background: #fff;
       position: absolute;
