--- a/css/scss/form.scss
+++ b/css/scss/form.scss
@@ -4,7 +4,7 @@
 
 .form__col {
   flex: 1;
-  margin-right: 30px;
+  margin-right: rem(30px);
 
       &:last-child {
         margin-right: 0;
@@ -13,7 +13,7 @@
 
 .form__row {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: rem(10px);
 
     &:last-child {
       margin-bottom: 0;
@@ -21,12 +21,12 @@
 }
 
 .row__pay {
-  margin-bottom: 28px;
+  margin-bottom: rem(28px);
 }
 
 .form__block {
   flex: 1;
-  margin-right: 20px;
+  margin-right: rem(20px);
 
     &:last-child {
       margin-right: 0;
@@ -36,9 +36,9 @@
 .form__input {
   width: 100%;
   border: none;
-  padding: 16px 10px;
-  border: solid 3px transparent;
-  border-radius: 4px;
+  padding: rem(16px) rem(10px);
+  border: solid rem(3px) transparent;
+  border-radius: rem(4px);
 
     &:focus {
       border-color: #DEE2BD;
@@ -46,7 +46,7 @@
     }
 
     &--textarea {
-      height: 154px;
+      height: rem(154px);
       resize: none;
     }
 }
@@ -54,18 +54,18 @@
 .form__controls {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 18px;
+  margin-bottom: rem(18px);
 
     &:last-child {
-      margin-bottom: 0px;
+      margin-bottom: rem(0px);
     }
 }
 
 .form__btns {
-  margin-top: 46px;
+  margin-top: rem(46px);
 
   .btn--theme--green {
-    margin-right: 10px;
+    margin-right: rem(10px);
   }
 }
 
