--- a/css/scss/interactive-avatar.scss
+++ b/css/scss/interactive-avatar.scss
@@ -1,8 +1,8 @@
 .interactive-avatar {
-  width: 74px;
-  height: 74px;
-  // border: 4px solid #365A49;
-  border: 4px solid transparent;
+  width: rem(74px);
+  height: rem(74px);
+  // border: rem(4px) solid #365A49;
+  border: rem(4px) solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
