--- a/css/scss/reviews-section.scss
+++ b/css/scss/reviews-section.scss
@@ -1,9 +1,9 @@
 .reviews-section {
-  background: url(../img/decor/ягоды-1.png) right 2% top 8% no-repeat;
+  background: url('../img/decor/ягоды-1.png') right 2% top 8% no-repeat;
   position: relative;
   
     &::before {
-      content: url(../img/decor/узор-2.png);
+      content: url('../img/decor/узор-2.png');
       position: absolute;
       left: 0;
       bottom: -25%;
@@ -11,7 +11,7 @@
     }
 
     &::after {
-      content: url(../img/decor/ягоды-2.png);
+      content: url('../img/decor/ягоды-2.png');
       position: absolute;
       left: 0;
       bottom: -14%;
@@ -21,5 +21,5 @@
 }
 
 .reviews-section__title {
-  margin-bottom: 26px;
+  margin-bottom: rem(26px);
 }
