--- a/css/scss/reviews.scss
+++ b/css/scss/reviews.scss
@@ -1,21 +1,21 @@
 .reviews__display {
   background: #F8FAF9;
-  padding: 42px;
-  margin-bottom: 15px;
+  padding: rem(42px);
+  margin-bottom: rem(15px);
   overflow: hidden;
   position: relative;
 
     &::before {
       content: '';
       display: block;
-      width: 84px;
-      height: 84px;
+      width: rem(84px);
+      height: rem(84px);
       background: #fff;
       border-radius: 50%;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: -62px;
+      top: rem(-62px);
     }
 
     &::after {
@@ -31,8 +31,8 @@
 }
 
 .reviews__avatar {
-  width: 254px;
-  height: 264px;
+  width: rem(254px);
+  height: rem(264px);
 }
 
 .reviews-avatar-img {
@@ -43,8 +43,8 @@
 
 .reviews__content {
   flex: 1;
-  margin-left: 34px;
-  padding: 25px 128px 0px 0px;
+  margin-left: rem(34px);
+  padding: rem(25px) rem(128px) rem(0px) rem(0px);
 
     & p {
       line-height: 1.2;
@@ -53,18 +53,18 @@
 }
 
 .reviews__title {
-  font-size: 27px;
+  font-size: rem(27px);
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: rem(10px);
   display: block;
 }
 
 .reviews__text {
-  margin-bottom: 29px;
+  margin-bottom: rem(29px);
 }
 
 .reviews__author {
-  font-size: 18px;
+  font-size: rem(18px);
   font-weight: 500;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .interactive-avatar {
-  margin-right: 6px;  
+  margin-right: rem(6px);  
 
     &:last-child {
       margin-right: 0;
