--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,5 +37,7 @@ $darkGreen: #365A49;
 @import "fixed-menu.scss";
 @import "hamburger.scss";
 
-
-
+@import "footer-section.scss";
+@import "map.scss";
+@import "socials.scss";
+@import "sprite-icons.scss";
