--- a/scss/benefits-section.scss
+++ b/scss/benefits-section.scss
@@ -3,10 +3,22 @@
   background: url('../img/decor/серый\ лист.png') left center no-repeat;
   position: relative;;
 
+  @include tablets {
+    background-position: left top 19%;
+  }
+
+  @include phones {
+    background: none;
+  }
+
   &::before {
     position: absolute;
     content: url('../img/decor/малина\ .png');
     left: 0;
     bottom: rem(-114px);
+
+    @include phones {
+      display: none;
+    }
   }
 }
