--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -2,12 +2,13 @@
   background: url('../img/decor/узор\ 1.png') right bottom no-repeat;
   background-color: $blue;
   height: 100vh;
-  min-height: rem(650px);
+  min-height: rem(652px);
   color: #fff;
   position: relative;
 
   @include tablets {
     background-position: right -4% bottom 121%;
+    background-size: contain;
   }
 
   &::before, &::after {
@@ -37,7 +38,7 @@
   justify-content: space-between;
   height: 100%;
   padding: rem(24px) 0 rem(45px);
-  background: url('../img/decor/Батончики.svg') left 78% center / 50% auto no-repeat;
+  background: url('../img/decor/Батончики.svg') right center / 50% auto no-repeat;
 
   @include tablets {
     background: none;
@@ -47,7 +48,6 @@
 .hero__title-section {
   width: 46%;
  
-
   @include tablets {
     width: 100%;
     flex: 1;
@@ -58,8 +58,11 @@
     text-align: center;
 
     &::before {
-      content: url('../../img/tablets/comp.png');
-      margin-bottom: 18px;
+      content: "";
+      width: rem(316px);
+      height: rem(338px);
+      background: url('../img/tablets/comp.png') center center / contain no-repeat;;
+      margin-bottom: rem(20px);
     }
   }
 }
@@ -85,6 +88,10 @@
   @include tablets {
     padding: 0 27%;
     margin-bottom: rem(24px);
+  }
+
+  @include phones {
+    padding: 0 15%;
   }
 }
 
