--- a/scss/fullscreen-menu.scss
+++ b/scss/fullscreen-menu.scss
@@ -1,17 +1,18 @@
 .fullscreen-menu {
   position: fixed;
-  top: 0;
+  top: -100%;
+  opacity: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   background-color: #313131;
-  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: rem(36px);
   line-height: 1.5;
   padding-bottom: 30%;
+  transition: all .5s;
   
   @include phones {
     font-size: rem(40px);
