--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -68,14 +68,19 @@
 }
 
 .hero__main-title {
-  font-size: rem(48px);
   line-height: 1.2;
   font-weight: bold;
   margin-bottom: rem(15px);
   text-transform: uppercase;
+  font-size: rem(48px);
 
   @include tablets {
     margin-bottom: rem(7px);
+  }
+
+  @include phones {
+    line-height: 1;
+    font-size: rem(36px);
   }
 }
 
@@ -92,6 +97,8 @@
 
   @include phones {
     padding: 0 15%;
+    font-size: rem(18px);
+    line-height: 1.1;
   }
 }
 
