реализован вертикалиный аккордеон jQuerry, работа слайдера bxSlider

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,4 +45,6 @@ $darkGreen: #365A49;
 @import "map.scss";
 @import "socials.scss";
 @import "sprite-icons.scss";
+@import "team-section.scss";
+@import "team.scss";
 @import "fullscreen-menu.scss";
