--- a/scss/product.scss
+++ b/scss/product.scss
@@ -18,6 +18,24 @@
   
 }
 
+.products-slider {
+  position: relative;
+
+  & .bx-wrapper {
+    border: 0;
+    background: transparent;
+    box-shadow: none;
+
+    & .bx-viewport {
+      height: auto;
+    }
+
+    & img {
+      max-width: 95%;
+    }
+  }
+}
+
 .product {
   display: flex;
   margin: 0;
@@ -68,6 +86,7 @@
   position: absolute;
   top: rem(-173px);
   right: rem(29px);
+  max-width: 95%;
 
  @include tablets {
   position: static;
