--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,39 +13,39 @@ $z-fixed-menu: 100;
 $blue: #61C4D9;
 $darkGreen: #365A49;
 
-@import "media.scss";
+@import "scss/aamedia.scss";
 
 //setup
-@import "layout"; 
+@import "scss/layout"; 
 
 //components 
-@import "hero";
-@import "header";
-@import "menu.scss";
-@import "phone.scss";
-@import "features";
-@import "btn";
-@import "section";
-@import "headline";
-@import "benefits";
-@import "benefit";
-@import "benefits-section";
-@import "reviews-section";
-@import "reviews";
-@import "interactive-avatar";
-@import "order-section";
-@import "form.scss";
-@import "radio.scss";
-@import "fixed-menu.scss";
-@import "hamburger.scss";
-@import "product.scss";
-@import "compound.scss";
-@import "slider.scss";
-@import "footer-section.scss";
-@import "map.scss";
-@import "socials.scss";
-@import "sprite-icons.scss";
-@import "team-section.scss";
-@import "team.scss";
-@import "fullscreen-menu.scss";
-@import "modal.scss";
+@import "scss/hero";
+@import "scss/header";
+@import "scss/menu.scss";
+@import "scss/phone.scss";
+@import "scss/features";
+@import "scss/btn";
+@import "scss/section";
+@import "scss/headline";
+@import "scss/benefits";
+@import "scss/benefit";
+@import "scss/benefits-section";
+@import "scss/reviews-section";
+@import "scss/reviews";
+@import "scss/interactive-avatar";
+@import "scss/order-section";
+@import "scss/form.scss";
+@import "scss/radio.scss";
+@import "scss/fixed-menu.scss";
+@import "scss/hamburger.scss";
+@import "scss/product.scss";
+@import "scss/compound.scss";
+@import "scss/slider.scss";
+@import "scss/footer-section.scss";
+@import "scss/map.scss";
+@import "scss/socials.scss";
+@import "scss/sprite-icons.scss";
+@import "scss/team-section.scss";
+@import "scss/team.scss";
+@import "scss/fullscreen-menu.scss";
+@import "scss/modal.scss";
