--- a/src/styles/scss/team-section.scss
+++ b/src/styles/scss/team-section.scss
@@ -1,3 +1,23 @@
+.team-section {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: url('./img/decor/Ягода-2\ 1.png');
+    bottom: -7%;
+    left: 1%;
+    z-index: 1;
+
+    @include tablets {
+      bottom: -5%;
+    }
+
+    @include phones {
+      display: none;
+    }
+  }
+}
+
 .team-section__title {
   margin-bottom: rem(48px);
 
