--- a/src/styles/scss/reviews.scss
+++ b/src/styles/scss/reviews.scss
@@ -32,7 +32,7 @@
   }
 
   &::after {
-    content: url('../img/decor/серая-малина.png');
+    content: url('./img/decor/серая-малина.png');
     position: absolute;
     right: 0;
     top: 2%;
